replaced the buggy one-way-input with the correct one-way-controls library to pass tests on 2.4 and 2.8

--- a/tests/dummy/app/templates/xfire.hbs
+++ b/tests/dummy/app/templates/xfire.hbs
@@ -1,3 +1,4 @@
+{{one-way-input pet.sanity update=(action callMe)}}
 {{one-way-input pet.nickname class='testspace-nickname' update=(dispatch updateModel 'nickname')}}
 <div class='testspace-nickname-display'>{{pet.nickname}}</div>
 {{outlet}}
